3822B1FI1/3_naive_gemm_omp/kabalova_valeria/log.txt
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/3_naive_gemm_omp/kabalova_valeria/naive_gemm_omp.cpp: In function ‘std::vector<float> NaiveGemmOMP(const std::vector<float>&, const std::vector<float>&, int)’:
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/3_naive_gemm_omp/kabalova_valeria/naive_gemm_omp.cpp:10:9: error: ‘size_t’ was not declared in this scope; did you mean ‘std::size_t’?
   10 |     for(size_t i =0; i < n; ++i){
      |         ^~~~~~
      |         std::size_t
In file included from /usr/include/c++/11/bits/stl_algobase.h:59,
                 from /usr/include/c++/11/vector:60,
                 from /home/crazyproger/sandbox/cuda-2025/3822B1FI1/3_naive_gemm_omp/kabalova_valeria/naive_gemm_omp.h:4,
                 from /home/crazyproger/sandbox/cuda-2025/3822B1FI1/3_naive_gemm_omp/kabalova_valeria/naive_gemm_omp.cpp:1:
/usr/include/x86_64-linux-gnu/c++/11/bits/c++config.h:280:33: note: ‘std::size_t’ declared here
  280 |   typedef __SIZE_TYPE__         size_t;
      |                                 ^~~~~~
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/3_naive_gemm_omp/kabalova_valeria/naive_gemm_omp.cpp:10:15: error: expected ‘;’ before ‘i’
   10 |     for(size_t i =0; i < n; ++i){
      |               ^~
      |               ;
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/3_naive_gemm_omp/kabalova_valeria/naive_gemm_omp.cpp:10:16: error: ‘i’ was not declared in this scope
   10 |     for(size_t i =0; i < n; ++i){
      |                ^
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/3_naive_gemm_omp/kabalova_valeria/naive_gemm_omp.cpp:10:27: error: expected ‘)’ before ‘;’ token
   10 |     for(size_t i =0; i < n; ++i){
      |        ~                  ^
      |                           )
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/3_naive_gemm_omp/kabalova_valeria/naive_gemm_omp.cpp:10:5: error: expected iteration declaration or initialization
   10 |     for(size_t i =0; i < n; ++i){
      |     ^~~
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/3_naive_gemm_omp/kabalova_valeria/naive_gemm_omp.cpp:10:31: error: ‘i’ was not declared in this scope
   10 |     for(size_t i =0; i < n; ++i){
      |                               ^
